etc/k8s/nginx/prod/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-http-test-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-http-test
  template:
    metadata:
      labels:
        app: node-http-test
    spec:
      containers:
      - name: node-http-test
        image: fabiojapa/node-http-test:1.0.1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 10
        resources:
          requests:
            memory: "16Mi"
            cpu: "20m"
          limits:
            memory: "32Mi"
            cpu: "50m"

---

apiVersion: v1
kind: Service
metadata:
  name: node-http-test-service
  labels:
    app: node-http-test
spec:
  selector:
    app: node-http-test
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-http-test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/whitelist-source-range: 191.177.183.103/32
spec:
  rules:
  - host: sakanary.io
    http:
      paths:
      - backend:
          serviceName: node-http-test-service
          servicePort: 80
