etc/k8s/nginx/prod/istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-http-test-ext
spec:
  hosts:
  - "sakanary.io"
  - "node-http-test-service.default.svc.cluster.local"
  - "node-http-test-service"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: node-http-test-service
        port:
          number: 80
